# landbot-backend-challenge

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0eeb75213792_create_initial_tables.py  81a789143d0b_team_notifier_config.py  d671e4f61317_assistance_migration.py
src/backoffice/application/commands/: team_notifier_config_create_command.py  team_notifier_config_create_command_handler.py
src/backoffice/application/event_handlers/: notify_team_on_assistance_created.py
src/backoffice/domain/: team_notifier_config.py  team_notifier_config_repository.py
src/customer_assistance/application/: assistance_request_command.py  assistance_request_command_handler.py
src/customer_assistance/domain/: assistance.py  assistance_created_event.py  assistance_repository.py  assistance_topic.py
src/customer_assistance/infrastructure/: assistance_record.py  sqlalchemy_asistance_repository.py
src/shared/domain/: aggregate_root.py
src/shared/infrastructure/: config.py  consumer.py  deps.py
test/: conftest.py
test/customer_assistance/domain/: test_assistance.py
tests/: conftest.py
tests/backoffice/application/: test_team_notifier_config_create_command_handler.py
tests/backoffice/domain/: team_notifier_config_create_command_mother.py  team_notifier_config_mother.py
tests/customer_assistance/application/: test_assistance_request_command_handler.py
tests/customer_assistance/domain/: assistance_mother.py  assistance_request_command_mother.py  test_assistance.py
(+30 files in other folders)
